<resources>
    <string name="app_name">BetterFit</string>
    <string name="title_home">홈</string>
    <string name="title_statistics">통계</string>
    <string name="title_contents">콘텐츠</string>
    <string name="title_friends">친구</string>
    <string name="day">일</string>
    <string name="week">주</string>
    <string name="month">월</string>
    <string name="year">년</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>